--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+# Python version constraint (recommended for consistent environments)
+# Requires Python >=3.9,<3.12
+
 # Flask and related packages
 Flask==2.2.3
 Flask-Cors==3.0.10
 Werkzeug==2.2.3
+gunicorn==21.2.0         # Added for production WSGI server support (optional but recommended)
 
 # Database
 pymongo==4.3.3
@@ -18,5 +22,9 @@ google-generativeai==0.3.2
 # Data validation
 pydantic==2.5.2
 
-# JSON handling
+# JSON handling / typing extensions
 typing-extensions==4.9.0
+
+# Installer upgrades (helpful for consistent installs across environments)
+pip>=23.0
+setuptools>=65.0
